--- a/source/_posts/大专生速成指南/操作系统/操作系统.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统.md
@@ -1,7 +1,6 @@
 ---
 title: 操作系统速成
 date: 2025-3-21
-updated: 2025-3-24
 categories: 
 - 操作系统
 tag:
@@ -258,3 +257,7 @@ Unix系统提供的域套接字提供了网络套接字类似的功能，如Nfin
 ## 设备管理
 
 I/O设备的基本概念：将数据输入输出计算机的外部设备
+
+![lqx](../img/36590efb66564f6081ec1eb74276ff0b.png)
+
+![image-20250512142529258](./../../../img/image-20250512142529258.png)
