--- a/source/_posts/大专生速成指南/操作系统/操作系统题集.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统题集.md
@@ -1,7 +1,6 @@
 ---
 title: 操作系统题集
 date: 2025-4-16
-updated: 2025-4-16
 categories: 
 - 操作系统
 tag:
@@ -125,3 +124,15 @@ tag:
   - **银行家算法** ：属于死锁避免策略。
   - **死锁检测法** ：属于死锁检测与恢复策略。
   - **资源分配图化简法** ：用于检测死锁是否存在。
+
+## 大题速成
+
+- 先来先服务（FCFS）
+
+![1](../img/36590efb66564f6081ec1eb74276ff0b.png)
+
+![lqx](../img/ad616906d5b0415e941b08dd04bb3bbd.jpg)
+
+- 短作业优先调度算法（SJF）
+- 高响应比优先调度算法（HRRN，Highest Response Ratio Next）
+
