操作系统更新

--- a/source/_posts/大专生速成指南/操作系统/操作系统.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统.md
@@ -54,6 +54,12 @@ tag:
 - **终止状态：**进程结束由系统清理或者归还PCB的状态
 
   ![image-20210830134139425](https://s2.loli.net/2025/03/27/vAwKJLImseuFQZ3.png)
+  
+  
+  
+  进程有哪3个基本状态，它们之间如何迁移
+  
+  ![image-20250512200710640](./../../../img/image-20250512200710640.png)
 
 ### **进程同步的方法（重要）**
 
@@ -222,6 +228,36 @@ Unix系统提供的域套接字提供了网络套接字类似的功能，如Nfin
 - **顺序文件**：按顺序放在存储介质中的文件，在逻辑文件当中**存储效率最高**，但不适合存储可变长文件
 - **索引文件**：为解决可变长文件存储而方面，需要配合索引表存储
 
+![image-20250512200958302](./../../../img/image-20250512200958302.png)
+
+
+
+### 磁盘调度算法：SSTF 与 SCAN
+
+- 最短寻道时间优先（SSTF）
+
+SSTF采用贪心策略，每次选择离当前磁头最近的请求
+
+- 扫描算法（SCAN，电梯算法）
+
+磁头在一个方向上连续扫描，访问所有未完成请求后才调换方向
+
+
+
+### 请求分页系统的页面置换算法
+
+- 最佳页面淘汰算法（OPT）
+
+​	选择将来最久不使用的页面进行替换。
+
+- 先进先出页面淘汰算法（FIFO）
+
+​	按进入内存的先后顺序淘汰最早进入的页面。
+
+- 最近最久未使用页面淘汰算法（LRU）
+
+​	选择最近最久未使用的页面进行替换。
+
 ### 辅存的存储空间分配
 
 - **辅存的分配方式**：连续分配（读取文件容易，速度快），链接分配（隐式链接和显示链接），索引分配
@@ -258,6 +294,5 @@ Unix系统提供的域套接字提供了网络套接字类似的功能，如Nfin
 
 I/O设备的基本概念：将数据输入输出计算机的外部设备
 
-![lqx](../img/36590efb66564f6081ec1eb74276ff0b.png)
 
-![image-20250512142529258](./../../../img/image-20250512142529258.png)
+
