--- a/source/_posts/大专生速成指南/概统/概统速成.md
+++ b/source/_posts/大专生速成指南/概统/概统速成.md
@@ -11,3 +11,43 @@ tag:
 <!-- toc -->
 
 [TOC]
+
+## 随机事件及概率
+
+![image-20250526101136027](../../../img/image-20250526101136027.png)
+
+![image-20250526110124728](../../../img/image-20250526110124728.png)
+
+![image-20250526112804826](../../../img/image-20250526112804826.png)
+
+![image-20250526113327138](../../../img/image-20250526113327138.png)
+
+![](../../../img/image-20250526114853101.png)
+
+![image-20250526114958702](../../../img/image-20250526114958702.png)
+
+![image-20250526115108214](../../../img/image-20250526115108214.png)
+
+## 全概率公式和贝叶斯公式
+
+![image-20250526142524392](../../../img/image-20250526142524392.png)
+
+![image-20250526143537807](../../../img/image-20250526143537807.png)
+
+![image-20250526143933192](../../../img/image-20250526143933192.png)
+
+![image-20250526144214452](../../../img/image-20250526144214452.png)
+
+## 一维随机变量
+
+![image-20250526150050666](../../../img/image-20250526150050666.png)
+
+![image-20250526150433813](../../../img/image-20250526150433813.png)
+
+![image-20250526150727912](../../../img/image-20250526150727912.png)
+
+![image-20250526153751368](../../../img/image-20250526153751368.png)
+
+![image-20250526154129124](../../../img/image-20250526154129124.png)
+
+![](../../../img/image-20250526154751113.png)
