--- a/source/_posts/大专生速成指南/概统/概统速成.md
+++ b/source/_posts/大专生速成指南/概统/概统速成.md
@@ -51,3 +51,21 @@ tag:
 ![image-20250526154129124](../../../img/image-20250526154129124.png)
 
 ![](../../../img/image-20250526154751113.png)
+
+![image-20250526231456044](./../../../img/image-20250526231456044.png)
+
+### 正态分布
+
+![image-20250526231920771](./../../../img/image-20250526231920771.png)
+
+![image-20250526232139967](./../../../img/image-20250526232139967.png)
+
+### 离散型
+
+![image-20250526232340631](./../../../img/image-20250526232340631.png)
+
+![](./../../../img/image-20250526233854640.png)
+
+![image-20250526233904889](./../../../img/image-20250526233904889.png)
+
+## 二维随机变量
