--- a/source/_posts/大专生速成指南/概统/概统速成.md
+++ b/source/_posts/大专生速成指南/概统/概统速成.md
@@ -1,7 +1,6 @@
 ---
 title: 概统速成
 date: 2025-4-08
-updated: 2025-4-08
 categories: 
 - 概统
 tag:
@@ -69,3 +68,54 @@ tag:
 ![image-20250526233904889](./../../../img/image-20250526233904889.png)
 
 ## 二维随机变量
+
+![image-20250527092724121](../../../img/image-20250527092724121.png)
+
+![image-20250527092849090](../../../img/image-20250527092849090.png)
+
+![image-20250527093230505](../../../img/image-20250527093230505.png)
+
+![image-20250527093424143](../../../img/image-20250527093424143.png)
+
+![image-20250527093503245](../../../img/image-20250527093503245.png)
+
+![image-20250527102350569](../../../img/image-20250527102350569.png)
+
+![image-20250527110731427](../../../img/image-20250527110731427.png)
+
+![image-20250527111111447](../../../img/image-20250527111111447.png)
+
+![image-20250527111359511](../../../img/image-20250527111359511.png)
+
+![image-20250527111434159](../../../img/image-20250527111434159.png)
+
+![image-20250527111655848](../../../img/image-20250527111655848.png)
+
+![image-20250527114957858](../../../img/image-20250527114957858.png)
+
+![image-20250527115000679](../../../img/image-20250527115000679.png)
+
+## 随机变量的数字特征
+
+![](../../../img/image-20250527152437563.png)
+
+![](../../../img/image-20250527154952296.png)
+
+![image-20250527155256636](../../../img/image-20250527155256636.png)
+
+![image-20250527155412072](../../../img/image-20250527155412072.png)
+
+![image-20250527160006465](../../../img/image-20250527160006465.png)
+
+![image-20250527160143289](../../../img/image-20250527160143289.png)
+
+![image-20250527161535871](../../../img/image-20250527161535871.png)
+
+### 切比雪夫不等式
+
+![image-20250527165117400](../../../img/image-20250527165117400.png)
+
+## 中心极限定理与数理统计
+
+
+
