--- a/source/_posts/大专生速成指南/概统/概统速成.md
+++ b/source/_posts/大专生速成指南/概统/概统速成.md
@@ -117,5 +117,15 @@ tag:
 
 ## 中心极限定理与数理统计
 
+![image-20250528094234223](../../../img/image-20250528094234223.png)
 
+![image-20250528095833621](../../../img/image-20250528095833621.png)
+
+### 三大分布
+
+![image-20250528100550251](../../../img/image-20250528100550251.png)
+
+![image-20250528101250671](../../../img/image-20250528101250671.png)
+
+## 参数估计
 
