--- a/source/_posts/图片测试.md
+++ b/source/_posts/图片测试.md
@@ -8,3 +8,7 @@ tags:
 ![laoba2](../img/e41b653fda104eb9be71fcf963cbb43b.jpg)
 
 ![lbl1](../img/c8bf3ffee3d041ca8e93ede0491e081c.jpg)
+
+![image-20250728162641249](../img/image-20250728162641249.png)
+
+![9c0e14447527992b401a1827d37127cd](../img/9c0e14447527992b401a1827d37127cd.png)
