--- a/source/_posts/大专生速成指南/计算机图形学/图形学.md
+++ b/source/_posts/大专生速成指南/计算机图形学/图形学.md
@@ -28,3 +28,113 @@ tag:
 ![image-20251120201222545](./../../../img/image-20251120201222545.png)
 
 ![image-20251120201206698](./../../../img/image-20251120201206698.png)
+
+# 光栅图形学算法
+
+![image-20251121160114979](./../../../img/image-20251121160114979.png)
+
+![image-20251121160135621](./../../../img/image-20251121160135621.png)
+
+## DDA-Digital Differential Analyzer
+
+![image-20251121160211009](./../../../img/image-20251121160211009.png)
+
+## Bresenham算法
+
+![image-20251121162101471](./../../../img/image-20251121162101471.png)
+
+![image-20251122172027563](./../../../img/image-20251122172027563.png)
+
+## 圆弧生成算法
+
+![image-20251121220132788](./../../../img/image-20251121220132788.png)
+
+## 区域的填充
+
+![image-20251122172842503](./../../../img/image-20251122172842503.png)
+
+![image-20251122204611498](./../../../img/image-20251122204611498.png)
+
+![image-20251122204842283](./../../../img/image-20251122204842283.png)
+
+![image-20251122204935470](./../../../img/image-20251122204935470.png)
+
+## 种子填充算法
+
+![image-20251122205148096](./../../../img/image-20251122205148096.png)
+
+![image-20251122205358921](./../../../img/image-20251122205358921.png)
+
+
+
+## 几何变换
+
+### 平移变换
+
+![image-20251122212419908](./../../../img/image-20251122212419908.png)
+
+![image-20251122212812319](./../../../img/image-20251122212812319.png)
+
+### 旋转变换
+
+![image-20251122212840666](./../../../img/image-20251122212840666.png)
+
+![image-20251122212955054](./../../../img/image-20251122212955054.png)
+
+![image-20251122213150280](./../../../img/image-20251122213150280.png)
+
+### 比列变换
+
+![image-20251122213221597](./../../../img/image-20251122213221597.png)
+
+![image-20251122213452809](./../../../img/image-20251122213452809.png)
+
+![image-20251122213514048](./../../../img/image-20251122213514048.png)
+
+
+
+### 对称变换
+
+![image-20251122213607935](./../../../img/image-20251122213607935.png)
+
+### 错切变换
+
+![image-20251122213805254](./../../../img/image-20251122213805254.png)
+
+![image-20251122213954491](./../../../img/image-20251122213954491.png)
+
+![image-20251122214111397](./../../../img/image-20251122214111397.png)
+
+![image-20251122214138220](./../../../img/image-20251122214138220.png)
+
+
+
+
+
+## 题目
+
+![image-20251121160945202](./../../../img/image-20251121160945202.png)
+
+![image-20251121162950823](./../../../img/image-20251121162950823.png)
+
+![image-20251122172737314](./../../../img/image-20251122172737314.png)
+
+![image-20251122172725813](./../../../img/image-20251122172725813.png)
+
+![image-20251121163011219](./../../../img/image-20251121163011219.png)
+
+![image-20251122205952379](./../../../img/image-20251122205952379.png)
+
+![image-20251122210018787](./../../../img/image-20251122210018787.png)
+
+![image-20251122211611243](./../../../img/image-20251122211611243.png)
+
+![image-20251122214624902](./../../../img/image-20251122214624902.png)
+
+![image-20251122214651148](./../../../img/image-20251122214651148.png)
+
+![image-20251122214701808](./../../../img/image-20251122214701808.png)
+
+![image-20251122221348827](./../../../img/image-20251122221348827.png)
+
+![image-20251122221802253](./../../../img/image-20251122221802253.png)
