--- a/source/_posts/大专生速成指南/计算机图形学/图形学.md
+++ b/source/_posts/大专生速成指南/计算机图形学/图形学.md
@@ -39,7 +39,9 @@ tag:
 
 ![image-20251121160211009](./../../../img/image-20251121160211009.png)
 
-## Bresenham算法
+## 中点Bresenham算法
+
+![image-20251123200724427](./../../../img/image-20251123200724427.png)
 
 ![image-20251121162101471](./../../../img/image-20251121162101471.png)
 
@@ -55,9 +57,15 @@ tag:
 
 ![image-20251122204611498](./../../../img/image-20251122204611498.png)
 
+### Y向连贯性算法
+
 ![image-20251122204842283](./../../../img/image-20251122204842283.png)
 
 ![image-20251122204935470](./../../../img/image-20251122204935470.png)
+
+### 改进
+
+
 
 ## 种子填充算法
 
@@ -65,9 +73,7 @@ tag:
 
 ![image-20251122205358921](./../../../img/image-20251122205358921.png)
 
-
-
-## 几何变换
+# 几何变换
 
 ### 平移变换
 
@@ -107,10 +113,6 @@ tag:
 
 ![image-20251122214138220](./../../../img/image-20251122214138220.png)
 
-
-
-
-
 ## 题目
 
 ![image-20251121160945202](./../../../img/image-20251121160945202.png)
@@ -138,3 +140,45 @@ tag:
 ![image-20251122221348827](./../../../img/image-20251122221348827.png)
 
 ![image-20251122221802253](./../../../img/image-20251122221802253.png)
+
+![image-20251123145440964](./../../../img/image-20251123145440964.png)
+
+# 光照模型
+
+## Gouraud明暗处理
+
+![image-20251123152156873](./../../../img/image-20251123152156873.png)
+
+![image-20251123152246362](./../../../img/image-20251123152246362.png)
+
+![image-20251123152606012](./../../../img/image-20251123152606012.png)
+
+## Phong明暗处理
+
+![image-20251123152537487](./../../../img/image-20251123152537487.png)
+
+![image-20251123153057159](./../../../img/image-20251123153057159.png)
+
+![image-20251123153136597](./../../../img/image-20251123153136597.png)
+
+# 消隐算法
+
+## 深度缓存算法 z-buffer
+
+![image-20251123165120002](./../../../img/image-20251123165120002.png)
+
+![image-20251123165134824](./../../../img/image-20251123165134824.png)
+
+
+
+## 改进
+
+![image-20251123164740653](./../../../img/image-20251123164740653.png)
+
+# Bezier曲线
+
+![image-20251123172606699](./../../../img/image-20251123172606699.png)
+
+## 几何作图
+
+![image-20251123171343801](./../../../img/image-20251123171343801.png)
