--- a/source/_posts/大专生速成指南/计算机图形学/图形学.md
+++ b/source/_posts/大专生速成指南/计算机图形学/图形学.md
@@ -13,7 +13,7 @@ tag:
 
 # 裁剪算法
 
-## cohen_sutherland算法
+## Cohen_Sutherland算法
 
 ![image-20251120194622008](./../../../img/image-20251120194622008.png)
 
@@ -63,15 +63,15 @@ tag:
 
 ![image-20251122204935470](./../../../img/image-20251122204935470.png)
 
-### 改进
-
-
-
 ## 种子填充算法
 
 ![image-20251122205148096](./../../../img/image-20251122205148096.png)
 
 ![image-20251122205358921](./../../../img/image-20251122205358921.png)
+
+## 改进
+
+![image-20251124154146358](./../../../img/image-20251124154146358.png)
 
 # 几何变换
 
