--- a/source/_posts/大专生速成指南/计组/计算机组成.md
+++ b/source/_posts/大专生速成指南/计组/计算机组成.md
@@ -63,3 +63,154 @@ tag:
 
 # 总线仲裁
 
+![image-20251222213003329](./../../../img/image-20251222213003329.png)
+
+![image-20251222213340978](./../../../img/image-20251222213340978.png)
+
+![image-20251222213501304](./../../../img/image-20251222213501304.png)
+
+![image-20251222213607363](./../../../img/image-20251222213607363.png)
+
+![image-20251222213802315](./../../../img/image-20251222213802315.png)
+
+![image-20251222214826321](./../../../img/image-20251222214826321.png)
+
+![image-20251222214203952](./../../../img/image-20251222214203952.png)
+
+![image-20251222214518323](./../../../img/image-20251222214518323.png)
+
+## 题目
+
+![image-20251222215012372](./../../../img/image-20251222215012372.png)
+
+# 总线定时（通讯）控制
+
+![image-20251222215119369](./../../../img/image-20251222215119369.png)
+
+![image-20251222215513249](./../../../img/image-20251222215513249.png)
+
+![image-20251222215630604](./../../../img/image-20251222215630604.png)
+
+![image-20251222220634462](./../../../img/image-20251222220634462.png)![image-20251222220817610](./../../../img/image-20251222220817610.png)
+
+![image-20251222220822802](./../../../img/image-20251222220822802.png)
+
+# 存储器
+
+![image-20251223164837263](./../../../img/image-20251223164837263.png)
+
+![image-20251223164919060](./../../../img/image-20251223164919060.png)
+
+![image-20251223165143245](./../../../img/image-20251223165143245.png)
+
+![image-20251223165452149](./../../../img/image-20251223165452149.png)
+
+![image-20251223170144322](./../../../img/image-20251223170144322.png)
+
+![image-20251223170412402](./../../../img/image-20251223170412402.png)
+
+![image-20251223170639347](./../../../img/image-20251223170639347.png)
+
+![image-20251223171112372](./../../../img/image-20251223171112372.png)
+
+![image-20251223171424331](./../../../img/image-20251223171424331.png)
+
+![image-20251223171719049](./../../../img/image-20251223171719049.png)
+
+![image-20251223171818366](./../../../img/image-20251223171818366.png)
+
+![image-20251223211935264](./../../../img/image-20251223211935264.png)
+
+![image-20251223212134617](./../../../img/image-20251223212134617.png)
+
+![image-20251223212340434](./../../../img/image-20251223212340434.png)
+
+![image-20251223212931171](./../../../img/image-20251223212931171.png)
+
+![image-20251223213018846](./../../../img/image-20251223213018846.png)
+
+![image-20251223213110871](./../../../img/image-20251223213110871.png)
+
+![image-20251223213123226](./../../../img/image-20251223213123226.png)
+
+![image-20251223213337181](./../../../img/image-20251223213337181.png)
+
+
+
+
+
+
+
+## 题目
+
+![image-20251223171145366](./../../../img/image-20251223171145366.png)
+
+![image-20251223171533562](./../../../img/image-20251223171533562.png)
+
+![image-20251223171641689](./../../../img/image-20251223171641689.png)
+
+![image-20251223172019358](./../../../img/image-20251223172019358.png)
+
+![image-20251223172256503](./../../../img/image-20251223172256503.png)
+
+![image-20251223172547254](./../../../img/image-20251223172547254.png)
+
+![image-20251223212206703](./../../../img/image-20251223212206703.png)
+
+![image-20251223212532092](./../../../img/image-20251223212532092.png)
+
+![image-20251223212907658](./../../../img/image-20251223212907658.png)
+
+# 输入输出系统
+
+![image-20251223213650717](./../../../img/image-20251223213650717.png)
+
+![image-20251223213747691](./../../../img/image-20251223213747691.png)
+
+![image-20251223213957767](./../../../img/image-20251223213957767.png)
+
+![image-20251223214134779](./../../../img/image-20251223214134779.png)
+
+![image-20251223214829646](./../../../img/image-20251223214829646.png)
+
+![image-20251223214904061](./../../../img/image-20251223214904061.png)
+
+![image-20251223215054871](./../../../img/image-20251223215054871.png)
+
+![image-20251223215116507](./../../../img/image-20251223215116507.png)
+
+![image-20251223215205163](./../../../img/image-20251223215205163.png)
+
+![image-20251223215327931](./../../../img/image-20251223215327931.png)
+
+
+
+## 题目
+
+![image-20251223215433696](./../../../img/image-20251223215433696.png)
+
+# **计算机的运算方法**
+
+## 编码计算
+
+![image-20251223215503057](./../../../img/image-20251223215503057.png)
+
+![image-20251223215827098](./../../../img/image-20251223215827098.png)
+
+## 定点数和浮点数
+
+![image-20251223220542098](./../../../img/image-20251223220542098.png)
+
+![image-20251223220649843](./../../../img/image-20251223220649843.png)
+
+![image-20251223220715688](./../../../img/image-20251223220715688.png)
+
+
+
+
+
+## 题目
+
+![image-20251223215714610](./../../../img/image-20251223215714610.png)
+
+![image-20251223220521916](./../../../img/image-20251223220521916.png)
