--- a/source/_posts/大专生速成指南/计组/计算机组成.md
+++ b/source/_posts/大专生速成指南/计组/计算机组成.md
@@ -205,6 +205,26 @@ tag:
 
 ![image-20251223220715688](./../../../img/image-20251223220715688.png)
 
+## 浮点表示法
+
+![b8e77968e96e39ff7babe0d53c807176](./../../../img/b8e77968e96e39ff7babe0d53c807176.png)
+
+![f4f6b398ebfc163609f0ce21a098cc59_720](./../../../img/f4f6b398ebfc163609f0ce21a098cc59_720.png)
+
+![628be1a44c982420e075f6b106af5bfe_720](./../../../img/628be1a44c982420e075f6b106af5bfe_720.png)
+
+![50168b65a5cf6c2c46d3a70a706f8f74_720](./../../../img/50168b65a5cf6c2c46d3a70a706f8f74_720.png)
+
+![image-20251224222559125](./../../../img/image-20251224222559125.png)
+
+![image-20251224223151431](https://s2.loli.net/2025/12/24/AVnpIUHP9aQCMbY.png)
+
+
+
+
+
+
+
 
 
 
@@ -214,3 +234,117 @@ tag:
 ![image-20251223215714610](./../../../img/image-20251223215714610.png)
 
 ![image-20251223220521916](./../../../img/image-20251223220521916.png)
+
+![6f9a70b06990696a6b21eeec517bbf99](./../../../img/6f9a70b06990696a6b21eeec517bbf99.png)
+
+![dda11c86b9efba9ee492008d22e90f32_720](./../../../img/dda11c86b9efba9ee492008d22e90f32_720.png)
+
+![f18c7d4fdc51e056b6248d31b01067b9_720](./../../../img/f18c7d4fdc51e056b6248d31b01067b9_720.png)
+
+![2667eea81d82e1a793412850414b8b5f_720](./../../../img/2667eea81d82e1a793412850414b8b5f_720.png)
+
+![image-20251224220808345](./../../../img/image-20251224220808345.png)
+
+![image-20251224222221991](./../../../img/image-20251224222221991.png)
+
+![image-20251224222400740](./../../../img/image-20251224222400740.png)
+
+![image-20251224222647025](./../../../img/image-20251224222647025.png)
+
+![image-20251224222838821](./../../../img/image-20251224222838821.png)
+
+![image-20251224223058013](./../../../img/image-20251224223058013.png)
+
+![image-20251224223601703](./../../../img/image-20251224223601703.png)
+
+# 指令系统
+
+![image-20251225161650612](./../../../img/image-20251225161650612.png)
+
+![image-20251225161745634](./../../../img/image-20251225161745634.png)
+
+![image-20251225162332753](./../../../img/image-20251225162332753.png)
+
+![image-20251225162410627](./../../../img/image-20251225162410627.png)
+
+![image-20251225162509581](./../../../img/image-20251225162509581.png)
+
+![image-20251225162617451](./../../../img/image-20251225162617451.png)
+
+![image-20251225162740915](./../../../img/image-20251225162740915.png)
+
+![image-20251225162844714](./../../../img/image-20251225162844714.png)
+
+## 指令字长
+
+![image-20251225162951762](./../../../img/image-20251225162951762.png)
+
+![image-20251225163050147](./../../../img/image-20251225163050147.png)
+
+![image-20251225163235343](./../../../img/image-20251225163235343.png)
+
+![image-20251225163309753](./../../../img/image-20251225163309753.png)
+
+![image-20251225163404220](./../../../img/image-20251225163404220.png)
+
+![image-20251225163647865](./../../../img/image-20251225163647865.png)
+
+![image-20251225164726315](./../../../img/image-20251225164726315.png)
+
+![image-20251225165049140](./../../../img/image-20251225165049140.png)
+
+
+
+
+
+
+
+
+
+
+
+## 题目
+
+![image-20251225161658760](./../../../img/image-20251225161658760.png)
+
+![image-20251225163459605](./../../../img/image-20251225163459605.png)
+
+![image-20251225164312787](./../../../img/image-20251225164312787.png)
+
+![image-20251225165143433](./../../../img/image-20251225165143433.png)
+
+![image-20251225165230813](./../../../img/image-20251225165230813.png)
+
+![image-20251225165459101](./../../../img/image-20251225165459101.png)
+
+![image-20251225170452834](./../../../img/image-20251225170452834.png)
+
+![image-20251225170814491](./../../../img/image-20251225170814491.png)
+
+![image-20251225170851706](./../../../img/image-20251225170851706.png)
+
+# CPU的结构和功能
+
+![image-20251225171322038](./../../../img/image-20251225171322038.png)
+
+![image-20251225171500798](./../../../img/image-20251225171500798.png)
+
+![image-20251225171548782](./../../../img/image-20251225171548782.png)
+
+![image-20251225174720361](./../../../img/image-20251225174720361.png)
+
+![image-20251225174748341](./../../../img/image-20251225174748341.png)
+
+![image-20251225175101621](./../../../img/image-20251225175101621.png)
+
+
+
+
+
+
+
+
+
+## 题目
+
+![c1bebc10e1996c7230876cde2d6e11c8](./../../../img/c1bebc10e1996c7230876cde2d6e11c8.png)
